2/04/2022
    Ora il programma sa scrivere la classifica nel file .csv

    Il programma aggiunge la vittoria o la sconfitta quando viene richiamato il metodo di fine partita

    BUG: quando al primo tiro escono risultati doppi i dadi vengono visualizzati male

    BUG: La lista della classifica si aggiorna, ma nella schermata “Classifica” rimangono i valori vecchi finchè non si pigiano le colonne

    Tolti alcuni TODO risolti e istruzioni di test